RESOLVED FIXED83624
Layout Test webaudio/* is flaky
https://bugs.webkit.org/show_bug.cgi?id=83624
Summary Layout Test webaudio/* is flaky
Jer Noble
Reported 2012-04-10 15:00:50 PDT
The following layout tests are flaky on chromium-win webaudio/audiobuffersource-playbackState.html webaudio/audiochannelmerger-stereo.html webaudio/audioparam-exponentialRampToValueAtTime.html webaudio/audioparam-linearRampToValueAtTime.html webaudio/audioparam-setTargetValueAtTime.html webaudio/audioparam-setValueAtTime.html webaudio/audioparam-setValueCurveAtTime.html webaudio/convolution-mono-mono.html webaudio/delaynode-maxdelay.html webaudio/delaynode-scheduling.html webaudio/delaynode.html webaudio/note-grain-on-play.html webaudio/note-grain-on-timing.html Probable cause: https://bugs.webkit.org/show_bug.cgi?id=74553 & http://trac.webkit.org/changeset/113728
Attachments
Patch (3.98 KB, patch)
2012-04-11 15:46 PDT, Jer Noble
no flags
Patch (4.30 KB, patch)
2012-04-11 16:01 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2012-04-10 15:18:19 PDT
Added failing test to test_expectations.txt in <http://trac.webkit.org/changeset/113776>.
Jer Noble
Comment 2 2012-04-11 15:46:26 PDT
Raymond Toy
Comment 3 2012-04-11 15:59:58 PDT
(In reply to comment #2) > Created an attachment (id=136769) [details] > Patch I've tested this patch using a chromium-win debug build, and all the tests pass. This is a *critically* important fix because it also pretty much breaks all of webaudio. All webaudio demos are broken. because of this.
Jer Noble
Comment 4 2012-04-11 16:01:47 PDT
Created attachment 136771 [details] Patch Rebased.
Chris Rogers
Comment 5 2012-04-11 16:06:49 PDT
Comment on attachment 136771 [details] Patch Thanks Jer
Chris Rogers
Comment 6 2012-04-11 16:15:36 PDT
Jer, do you want me to put this in commit queue?
Jer Noble
Comment 7 2012-04-11 18:01:47 PDT
(In reply to comment #6) > Jer, do you want me to put this in commit queue? I got it, thanks. :)
WebKit Review Bot
Comment 8 2012-04-11 18:09:23 PDT
Comment on attachment 136771 [details] Patch Clearing flags on attachment: 136771 Committed r113933: <http://trac.webkit.org/changeset/113933>
WebKit Review Bot
Comment 9 2012-04-11 18:09:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.