Layout Test webaudio/* is flaky https://bugs.webkit.org/show_bug.cgi?id=83624

Reviewed by Chris Rogers.

Source/WebCore:

No new tests; fixes webaudio/ layout tests.

A merge error led to an Mutex overunlock situation, which caused all future mutex trylock
attempts to fail, but only on Windows. Remove the extraneous mutex unlock().

* Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::process):

LayoutTests:

Re-enable webaudio/ layout tests on chromium-win.

* platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/101228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113933 268f45cc-cd09-0410-ab3c-d52691b4dbfc